# wasmtime-plugin

./: .cirrus.yml  LICENSE
example/example_guest/: Cargo.toml
example/example_guest/src/: lib.rs
example/example_host/: Cargo.toml
example/example_host/src/: main.rs
guest/: Cargo.toml
guest/guest_derive/: Cargo.toml
guest/guest_derive/src/: lib.rs
guest/src/: lib.rs
host/: Cargo.toml
host/src/: errors.rs  lib.rs
