[package]
name = "wasmtime_plugin_guest"
version = "0.1.0"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wezm/wasmtime-plugin/tree/main/guest"
description = "A low-ish level tool for easily writing WASM based plugins that uses Wasmtime"
keywords = ["wasm", "plugin"]
categories = ["wasm"]

[features]
default = ["serialize_bincode"]
inject_getrandom = ["getrandom"]
serialize_bincode = ["bincode", "serde"]
serialize_json = ["serde_json", "serde"]
serialize_nanoserde_json = ["nanoserde"]


[dependencies]
wasmtime_plugin_guest_derive = "0.1.1"
getrandom = { version = "0.2", features = ["custom"], optional = true }
serde = { version = "1", optional = true }
bincode = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
nanoserde = { version = "0.1", optional = true }
bitfield = "0.13.2"
