[package]
name = "wasmtime_plugin_host"
version = "0.1.7"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wezm/wasmtime-plugin/tree/main/host"
description = "A low-ish level tool for easily hosting WASM based plugins"
keywords = ["wasm", "plugin"]
categories = ["wasm"]

[features]
default = ["serialize_bincode"]
inject_getrandom = ["getrandom"]
serialize_bincode = ["bincode", "serde"]
serialize_json = ["serde_json", "serde"]
serialize_nanoserde_json = ["nanoserde"]

[dependencies]
anyhow = "1"
wasmtime = "0.28.0"
getrandom = { version = "0.2", optional = true }
serde = { version = "1", optional = true }
bincode = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
nanoserde = { version = "0.1", optional = true }
bitfield = "0.13.2"
