[package]
name = "wasmtime_plugin_guest_derive"
version = "0.1.1"
edition = "2018"
license = "MIT"
repository = "https://github.com/wezm/wasmtime-plugin/tree/main/guest/guest_derive"
description = "Attribute macros used by wasmtime_plugin_guest"
keywords = ["wasm", "plugin"]
categories = ["wasm"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
proc-macro2 = "1.0.24"
quote = "1"
